added responsiveness for navbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div class="logoWrapper">
       <img id=logo src="" alt="logooooooooo">
     </div>
+    <div class="bodyWrapper">
+
+    </div>
     <nav>
       <ul class="navButtons">
         <li><a href="#">Über mich</a></li>
