--- a/index.html
+++ b/index.html
@@ -42,9 +42,22 @@
     </div>
     <nav>
       <ul class="navButtons">
-        <li><a href="#">Über mich</a></li>
-        <li><a href="#">Service</a></li>
-        <li><a href="#">Kontakt</a></li>
+        <li>
+          <img class="icon home" src="icons/home.svg"></img>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <img class="icon about" src="icons/about.svg"></img>
+          <a href="#">Über mich</a>
+        </li>
+        <li class="lightBlue">
+          <img class="icon service" src="icons/service.svg"></img>
+          <a href="#">Service</a>
+        </li>
+        <li>
+          <img class="icon contact" src="icons/contact.svg"></img>
+          <a href="#">Kontakt</a>
+        </li>
       </ul>
     </nav>
   </body>
