Got basic navScroll function down, need to animate

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="footer">
       All Rights reserved
     </div>
-    <nav>
+    <nav id="navigation">
       <ul class="navButtons">
         <li>
           <img class="icon home" src="icons/home.svg"></img>
@@ -61,4 +61,5 @@
       </ul>
     </nav>
   </body>
+   <script src="scripts.js"></script>
 </html>
