navbar responsivness for desktop screens

--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
     </div>
     <nav id="navigation">
       <ul class="navButtons">
-        <li>
+        <li href="#" alt"home">
           <img class="icon home" src="icons/home.svg"></img>
-          <a href="#">Home</a>
+          Home
         </li>
-        <li>
+        <li href="#" alt"über mich">
           <img class="icon about" src="icons/about.svg"></img>
-          <a href="#">Über mich</a>
+          Über mich
         </li>
-        <li class="lightBlue">
+        <li class="lightBlue" href="#" alt"service">
           <img class="icon service" src="icons/service.svg"></img>
-          <a href="#">Service</a>
+          Service
         </li>
-        <li>
+        <li href="#" alt"kontakt">
           <img class="icon contact" src="icons/contact.svg"></img>
-          <a href="#">Kontakt</a>
+          Kontakt
         </li>
       </ul>
     </nav>
