changed hover and active behavior for navbar, added transitions

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <div class="footer">
       All Rights reserved
     </div>
-    <nav id="navigation">
+    <nav id="navigation" class="noselect">
       <ul class="navButtons">
-        <li href="#" alt"home">
+        <li class="lightBlue" href="#" alt"home">
           <img class="icon home" src="icons/home.svg"></img>
           Home
         </li>
@@ -50,7 +50,7 @@
           <img class="icon about" src="icons/about.svg"></img>
           Über mich
         </li>
-        <li class="lightBlue" href="#" alt"service">
+        <li class="" href="#" alt"service">
           <img class="icon service" src="icons/service.svg"></img>
           Service
         </li>
