--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="bodyWrapper">
       <div class="bodyInnerWrapper">
-        <div class="vid">
+        <div class="presWrapper vid active">
             <h3>Atemberaubende Filme!</h3>
             <img class="presItem" src="movies/landingvid.png" alt="video">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -20,14 +20,14 @@
               Aenean vehicula augue vel est volutpat, ut aliquam ipsum egestas.
               Donec ex odio, consectetur molestie augue nec, tincidunt suscipit elit.</p>
         </div>
-        <div class="images">
+        <div class="presWrapper images">
           <h3>Inspirierende Fotos</h3>
           <img class="presItem" id="presImage" src="images/vid2.png" alt="image">
           <p>Integer vulputate nisl et erat vehicula, id commodo tortor mollis. Donec fermentum enim ac orci lobortis tincidunt.
              Aenean elementum fermentum lacus sit amet convallis. Etiam scelerisque commodo vulputate. Nullam rhoncus dolor
              a velit pellentesque euismod. Nulla imperdiet odio diam, quis efficitur libero accumsan at. </p>
         </div>
-        <div class="more">
+        <div class="presWrapper more">
           <h3>Noch nicht fündig geworden?</h3>
           <img class="presItem" src="movies/more.png" alt="image">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
