added animation and indicator for bottom slider circles

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="slideDotsWrapper">
-      <span class="circle dropShadow" id="alpha"></span>
+      <span class="circle active dropShadow" id="alpha"></span>
       <span class="circle dropShadow" id="beta"></span>
       <span class="circle dropShadow" id="gamma"></span>
     </div>
