--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
       <span class="circle dropShadow" id="gamma"></span>
     </div>
     <div class="footer">
-      All Rights reserved
+      	<span>&#169;2021 Johannes Eifler, Freifilmer | Realisation:
+        <a href="https:github.com/JarlTetrazepam">JT</a></span>
     </div>
     <nav id="navigation" class="noselect">
       <ul class="navButtons">
