--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <span class="arrow left dropShadow"></span>
         </div>
           <div class="presWrapper vid active">
-              <h3>Atemberaubende Filme!</h3>
+              <h3 class="presItemHeading">Atemberaubende Filme!</h3>
               <img class="presItem" src="movies/landingvid.png" alt="video">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed tempus libero libero, quis ullamcorper neque venenatis vitae.
@@ -24,14 +24,14 @@
                 Donec ex odio, consectetur molestie augue nec, tincidunt suscipit elit.</p>
           </div>
           <div class="presWrapper images">
-            <h3>Inspirierende Fotos</h3>
+            <h3 class="presItemHeading">Inspirierende Fotos</h3>
             <img class="presItem" id="presImage" src="images/vid2.png" alt="image">
             <p>Integer vulputate nisl et erat vehicula, id commodo tortor mollis. Donec fermentum enim ac orci lobortis tincidunt.
                Aenean elementum fermentum lacus sit amet convallis. Etiam scelerisque commodo vulputate. Nullam rhoncus dolor
                a velit pellentesque euismod. Nulla imperdiet odio diam, quis efficitur libero accumsan at. </p>
           </div>
           <div class="presWrapper more">
-            <h3>Noch nicht fündig geworden?</h3>
+            <h3 class="presItemHeading">Noch nicht fündig geworden?</h3>
             <img class="presItem" src="movies/more.png" alt="image">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Sed tempus libero libero, quis ullamcorper neque venenatis vitae.
