animated nav button hover

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
       <ul class="navButtons">
         <li class="lightBlue" href="#" alt"home">
           <img class="icon home" src="icons/home.svg"></img>
-          Home
+          <span>Home</span>
         </li>
         <li href="#" alt"über mich">
           <img class="icon about" src="icons/about.svg"></img>
-          Über mich
+          <span>Über mich</span>
         </li>
         <li class="" href="#" alt"service">
           <img class="icon service" src="icons/service.svg"></img>
-          Service
+          <span>Service</span>
         </li>
         <li href="#" alt"kontakt">
           <img class="icon contact" src="icons/contact.svg"></img>
-          Kontakt
+          <span>Kontakt</span>
         </li>
       </ul>
     </nav>
