--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 Sed tempus libero libero, quis ullamcorper neque venenatis vitae.
                 Aenean vehicula augue vel est volutpat, ut aliquam ipsum egestas.
                 Donec ex odio, consectetur molestie augue nec, tincidunt suscipit elit.</p>
+                <button class="learnMore">Mehr erfahren<img class="dropShadow" src="icons/learnMore.svg" alt="learn more icon"> </button>
           </div>
           <div class="presWrapper images">
             <h3 class="presItemHeading">Inspirierende Fotos</h3>
@@ -29,6 +30,7 @@
             <p>Integer vulputate nisl et erat vehicula, id commodo tortor mollis. Donec fermentum enim ac orci lobortis tincidunt.
                Aenean elementum fermentum lacus sit amet convallis. Etiam scelerisque commodo vulputate. Nullam rhoncus dolor
                a velit pellentesque euismod. Nulla imperdiet odio diam, quis efficitur libero accumsan at. </p>
+             <button class="learnMore">Mehr erfahren <img class="dropShadow" src="icons/learnMore.svg" alt="learn more icon"> </button>
           </div>
           <div class="presWrapper more">
             <h3 class="presItemHeading">Noch nicht fündig geworden?</h3>
@@ -37,6 +39,7 @@
               Sed tempus libero libero, quis ullamcorper neque venenatis vitae.
               Aenean vehicula augue vel est volutpat, ut aliquam ipsum egestas.
               Donec ex odio, consectetur molestie augue nec, tincidunt suscipit elit.</p>
+            <button class="learnMore">Mehr erfahren <img class="dropShadow"  src="icons/learnMore.svg" alt="learn more icon"> </button>
           </div>
         <div class="arrowWrapper">
           <span class="arrow right dropShadow"></span>
