--- a/index.html
+++ b/index.html
@@ -18,28 +18,49 @@
           <div class="presWrapper vid active">
               <h3 class="presItemHeading">Atemberaubende Filme!</h3>
               <img class="presItem" src="movies/landingvid.png" alt="video">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              <div class="pButtonWrapper">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed tempus libero libero, quis ullamcorper neque venenatis vitae.
                 Aenean vehicula augue vel est volutpat, ut aliquam ipsum egestas.
                 Donec ex odio, consectetur molestie augue nec, tincidunt suscipit elit.</p>
-                <button class="learnMore">Mehr erfahren<img class="dropShadow" src="icons/learnMore.svg" alt="learn more icon"> </button>
+                <button class="learnMore"><span>Mehr erfahren</span><svg viewBox="0 0 477.862 477.862"><path d="M187.722,102.856V17.062C187.719,7.636,180.076-0.003,170.65,0c-4.834,0.001-9.44,2.053-12.676,5.644L4.375,176.311
+			c-5.617,6.256-5.842,15.67-0.529,22.187l153.6,187.733c5.968,7.295,16.72,8.371,24.016,2.403c3.952-3.233,6.249-8.066,6.26-13.172
+			v-85.043c134.827,4.386,218.965,62.02,256.888,175.787c2.326,6.96,8.841,11.653,16.179,11.656c0.92,0.003,1.84-0.072,2.748-0.222
+			c8.256-1.347,14.319-8.479,14.319-16.845C477.855,259.818,356.87,112.174,187.722,102.856z M170.655,255.995
+			c-9.426,0-17.067,7.641-17.067,17.067v54.613L39.532,188.257l114.057-126.72v57.924c0,9.426,7.641,17.067,17.067,17.067
+			c134.144,0,234.53,92.826,264.124,234.462C379.841,294.6,291.385,255.995,170.655,255.995z"/></svg></button>
+              </div>
           </div>
           <div class="presWrapper images">
             <h3 class="presItemHeading">Inspirierende Fotos</h3>
             <img class="presItem" id="presImage" src="images/vid2.png" alt="image">
-            <p>Integer vulputate nisl et erat vehicula, id commodo tortor mollis. Donec fermentum enim ac orci lobortis tincidunt.
-               Aenean elementum fermentum lacus sit amet convallis. Etiam scelerisque commodo vulputate. Nullam rhoncus dolor
-               a velit pellentesque euismod. Nulla imperdiet odio diam, quis efficitur libero accumsan at. </p>
-             <button class="learnMore">Mehr erfahren <img class="dropShadow" src="icons/learnMore.svg" alt="learn more icon"> </button>
+            <div class="pButtonWrapper">
+              <p>Integer vulputate nisl et erat vehicula, id commodo tortor mollis. Donec fermentum enim ac orci lobortis tincidunt.
+                 Aenean elementum fermentum lacus sit amet convallis. Etiam scelerisque commodo vulputate. Nullam rhoncus dolor
+                 a velit pellentesque euismod. Nulla imperdiet odio diam, quis efficitur libero accumsan at. </p>
+               <button class="learnMore"><span>Mehr erfahren</span><svg viewBox="0 0 477.862 477.862"><path d="M187.722,102.856V17.062C187.719,7.636,180.076-0.003,170.65,0c-4.834,0.001-9.44,2.053-12.676,5.644L4.375,176.311
+     c-5.617,6.256-5.842,15.67-0.529,22.187l153.6,187.733c5.968,7.295,16.72,8.371,24.016,2.403c3.952-3.233,6.249-8.066,6.26-13.172
+     v-85.043c134.827,4.386,218.965,62.02,256.888,175.787c2.326,6.96,8.841,11.653,16.179,11.656c0.92,0.003,1.84-0.072,2.748-0.222
+     c8.256-1.347,14.319-8.479,14.319-16.845C477.855,259.818,356.87,112.174,187.722,102.856z M170.655,255.995
+     c-9.426,0-17.067,7.641-17.067,17.067v54.613L39.532,188.257l114.057-126.72v57.924c0,9.426,7.641,17.067,17.067,17.067
+     c134.144,0,234.53,92.826,264.124,234.462C379.841,294.6,291.385,255.995,170.655,255.995z"/></svg></button>
+             </div>
           </div>
           <div class="presWrapper more">
             <h3 class="presItemHeading">Noch nicht fündig geworden?</h3>
             <img class="presItem" src="movies/more.png" alt="image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <div class="pButtonWrapper">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Sed tempus libero libero, quis ullamcorper neque venenatis vitae.
               Aenean vehicula augue vel est volutpat, ut aliquam ipsum egestas.
               Donec ex odio, consectetur molestie augue nec, tincidunt suscipit elit.</p>
-            <button class="learnMore">Mehr erfahren <img class="dropShadow"  src="icons/learnMore.svg" alt="learn more icon"> </button>
+              <button class="learnMore"><span>Mehr erfahren</span><svg viewBox="0 0 477.862 477.862"><path d="M187.722,102.856V17.062C187.719,7.636,180.076-0.003,170.65,0c-4.834,0.001-9.44,2.053-12.676,5.644L4.375,176.311
+    c-5.617,6.256-5.842,15.67-0.529,22.187l153.6,187.733c5.968,7.295,16.72,8.371,24.016,2.403c3.952-3.233,6.249-8.066,6.26-13.172
+    v-85.043c134.827,4.386,218.965,62.02,256.888,175.787c2.326,6.96,8.841,11.653,16.179,11.656c0.92,0.003,1.84-0.072,2.748-0.222
+    c8.256-1.347,14.319-8.479,14.319-16.845C477.855,259.818,356.87,112.174,187.722,102.856z M170.655,255.995
+    c-9.426,0-17.067,7.641-17.067,17.067v54.613L39.532,188.257l114.057-126.72v57.924c0,9.426,7.641,17.067,17.067,17.067
+    c134.144,0,234.53,92.826,264.124,234.462C379.841,294.6,291.385,255.995,170.655,255.995z"/></svg></button>
+            </div>
           </div>
         <div class="arrowWrapper">
           <span class="arrow right dropShadow"></span>
