redid placeholders, improved animations

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
           <div class="presWrapper vid active">
               <h3 class="presItemHeading">Atemberaubende Filme!</h3>
-              <img class="presItem" src="movies/landingvid.png" alt="video">
+              <img class="presItem" src="movies/landingvid.jpg" alt="video">
               <div class="pButtonWrapper">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed tempus libero libero, quis ullamcorper neque venenatis vitae.
@@ -33,7 +33,7 @@
           </div>
           <div class="presWrapper images">
             <h3 class="presItemHeading">Inspirierende Fotos</h3>
-            <img class="presItem" id="presImage" src="images/vid2.png" alt="image">
+            <img class="presItem" id="presImage" src="images/vid2.jpg" alt="image">
             <div class="pButtonWrapper">
               <p>Integer vulputate nisl et erat vehicula, id commodo tortor mollis. Donec fermentum enim ac orci lobortis tincidunt.
                  Aenean elementum fermentum lacus sit amet convallis. Etiam scelerisque commodo vulputate. Nullam rhoncus dolor
@@ -48,7 +48,7 @@
           </div>
           <div class="presWrapper more">
             <h3 class="presItemHeading">Noch nicht fündig geworden?</h3>
-            <img class="presItem" src="movies/more.png" alt="image">
+            <img class="presItem" src="movies/more.jpg" alt="image">
             <div class="pButtonWrapper">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Sed tempus libero libero, quis ullamcorper neque venenatis vitae.
