restructured dom, added anchor tags for nav, fixed footer, init about.ht

--- a/index.html
+++ b/index.html
@@ -74,26 +74,34 @@
     </div>
     <div class="footer">
       	<span>&#169;2021 Johannes Eifler, Freifilmer | Realisation:
-        <a href="https:github.com/JarlTetrazepam">JT</a></span>
+        <a href="https:github.com/JarlTetrazepam" target="_blank" rel="noreferrer noopener">JT</a></span>
     </div>
     <nav id="navigation" class="noselect">
       <ul class="navButtons">
-        <li class="lightBlue" href="#" alt"home">
-          <img class="icon home" src="icons/home.svg"></img>
-          <span>Home</span>
-        </li>
-        <li href="#" alt"über mich">
-          <img class="icon about" src="icons/about.svg"></img>
-          <span>Über mich</span>
-        </li>
-        <li class="" href="#" alt"service">
-          <img class="icon service" src="icons/service.svg"></img>
-          <span>Service</span>
-        </li>
-        <li href="#" alt"kontakt">
-          <img class="icon contact" src="icons/contact.svg"></img>
-          <span>Kontakt</span>
-        </li>
+        <a class="navitem lightBlue" href="index.html" alt="Home">
+          <li>
+              <img class="icon home" src="icons/home.svg"></img>
+              <span>Home</span>
+          </li>
+        </a>
+        <a class="navitem" href="about.html" alt="Über mich">
+          <li>
+            <img class="icon about" src="icons/about.svg"></img>
+            <span>Über mich</span>
+          </li>
+        </a>
+        <a class="navitem" href="#" alt="Service">
+          <li>
+            <img class="icon service" src="icons/service.svg"></img>
+            <span>Service</span>
+          </li>
+        </a>
+        <a class="navitem" href="#" alt="Kontakt">
+          <li>
+            <img class="icon contact" src="icons/contact.svg"></img>
+            <span>Kontakt</span>
+          </li>
+        </a>
       </ul>
     </nav>
   </body>
