initialized first versin of img gallery, much more to come

--- a/about.html
+++ b/about.html
@@ -13,7 +13,24 @@
     </div>
     <div class="bodyWrapper">
       <div class="bodyInnerWrapper">
-
+        <h3>Seid Gegüßt, werter Edelmensch</h3>
+        <div class="aboutWrapper">
+          <p> Aliquam interdum venenatis mi, eget molestie urna commodo ac. Orci varius natoque penatibus et onec vitae hendrerit tellus, eget pellentesque purus.
+enenatis. Mauris metus nisl, accumsan eu vulputate mollis, auctor eget nunc. Suspendisse molestie elit eget iaculis</p>
+          <p>elementum. Praesent congue tempor libero ac interdum. Aenean maximus sed diam quis tempor. Aenean malesuada turpis at felis semper, nec pulvinar dolor dignissim. Quisque luctus felis ut dui mattis, vel fringilla purus congue. Quisque suscipit augue quis dolor malesuada mollis. Vestibulum interdum et enim nec cursus.</p>
+          <p>
+            Nullam vel elementum massa. Mauris interdum arcu id efficitur malesuada. Vestibulum et erat sed felis hendrerit sagittis. Pellentesque ut mauris sed nisl mollis congue. Morbi eleifend suscipit justo ut condimentum. Donec ut magna vel mauris malesuada pulvinar ut vitae sapien. Phasellus consequat, felis ac cursus f</p>
+        </div>
+        <div class="imageGallery">
+          <img src="images/alpha.jpg" alt="">
+          <img src="images/beta.jpg" alt="">
+          <img src="images/gamma.jpg" alt="">
+          <img src="images/delta.jpg" alt="">
+          <img src="images/epsilon.jpg" alt="">
+          <img src="images/zeta.jpg" alt="">
+          <img src="images/eta.jpg" alt="">
+          <img src="images/theta.jpg" alt="">
+        </div>
       </div>
     </div>
     <div class="footer">
@@ -22,13 +39,13 @@
     </div>
     <nav id="navigation" class="noselect">
       <ul class="navButtons">
-        <a class="navitem lightBlue" href="index.html" alt="Home">
+        <a class="navitem" href="index.html" alt="Home">
           <li>
               <img class="icon home" src="icons/home.svg"></img>
               <span>Home</span>
           </li>
         </a>
-        <a class="navitem" href="about.html" alt="Über mich">
+        <a class="navitem lightBlue" href="about.html" alt="Über mich">
           <li>
             <img class="icon about" src="icons/about.svg"></img>
             <span>Über mich</span>
