added floaters, not satisfied tho

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
     <title>Johannes Eifler</title>
@@ -15,10 +15,13 @@
       <div class="bodyInnerWrapper">
         <h3>Seid Gegüßt, werter Edelmensch</h3>
         <div class="aboutWrapper">
-          <p> Aliquam interdum venenatis mi, eget molestie urna commodo ac. Orci varius natoque penatibus et onec vitae hendrerit tellus, eget pellentesque purus.
-enenatis. Mauris metus nisl, accumsan eu vulputate mollis, auctor eget nunc. Suspendisse molestie elit eget iaculis</p>
-          <p>elementum. Praesent congue tempor libero ac interdum. Aenean maximus sed diam quis tempor. Aenean malesuada turpis at felis semper, nec pulvinar dolor dignissim. Quisque luctus felis ut dui mattis, vel fringilla purus congue. Quisque suscipit augue quis dolor malesuada mollis. Vestibulum interdum et enim nec cursus.</p>
           <p>
+            <div class="imgWrapper dropShadow"><img class="dropShadow" src="images/lambda.jpg" alt=""></div>Aliquam interdum venenatis mi, eget molestie urna commodo ac. Orci varius natoque penatibus et onec vitae hendrerit tellus, eget pellentesque purus.
+enenatis. Mauris metus nisl, accumsan eu vulputate mollis, auctor eget nunc. Suspendisse molestie elit eget iaculis</br></br>
+<h4>Konzept</h4>
+<div class="imgWrapper floatLeft"><img src="images/iota.jpg" alt=""></div>elementum. Praesent congue tempor libero ac interdum. Aenean maximus sed diam quis tempor. Aenean malesuada turpis at felis semper, nec pulvinar dolor dignissim. Quisque luctus felis ut dui mattis, vel fringilla purus congue. Quisque suscipit augue quis dolor malesuada mollis. Vestibulum interdum et enim nec cursus.</br></br>
+            <h4>Perfektion</h4>
+            <div class="imgWrapper"><img src="images/kappa.jpg" alt=""></div>
             Nullam vel elementum massa. Mauris interdum arcu id efficitur malesuada. Vestibulum et erat sed felis hendrerit sagittis. Pellentesque ut mauris sed nisl mollis congue. Morbi eleifend suscipit justo ut condimentum. Donec ut magna vel mauris malesuada pulvinar ut vitae sapien. Phasellus consequat, felis ac cursus f</p>
         </div>
         <div class="imageGallery">
