--- a/about.html
+++ b/about.html
@@ -18,21 +18,20 @@
             <span>
               <p>
                 <div class="imgWrapper dropShadow"><img class="dropShadow" src="images/lambda.jpg" alt=""></div>
-                Aliquam interdum venenatis mi, eget molestie urna commodo ac. Orci varius natoque penatibus et onec vitae hendrerit tellus, eget pellentesque purus.
-    enenatis. Mauris metus nisl, accumsan eu vulputate mollis, auctor eget nunc. Suspendisse molestie elit eget iaculis
+                Sed consectetur neque eu turpis viverra rutrum. Nam nulla tortor, tincidunt eget libero eget, efficitur congue est. Cras maximus sed quam a aliquet. In maximus et lorem sed imperdiet. Maecenas vel turpis eros. In viverra, velit nec pulvinar egestas, urna ante pretium ex, eu congue elit odio vel eros. Cras venenatis at velit quis blandit. Ut tincidunt, est sit amet mollis bibendum, lectus quam malesuada turpis, quis eleifend tellus elit sed arcu. Quisque in est id sem porttitor efficitur. Duis non libero sit amet est blandit porta vel et sem. In laoreet malesuada pulvinar. Praesent laoreet ullamcorper egestas. Vestibulum eget ex consectetur, placerat nunc sodales, condimentum massa. Morbi magna sapien, facilisis ac imperdiet in, commodo et metus.
               </p>
             </span>
               <h4>Konzept</h4>
               <span>
                 <p>
-                  <div class="imgWrapper floatLeft"><img src="images/iota.jpg" alt=""></div>elementum. Praesent congue tempor libero ac interdum. Aenean maximus sed diam quis tempor. Aenean malesuada turpis at felis semper, nec pulvinar dolor dignissim. Quisque luctus felis ut dui mattis, vel fringilla purus congue. Quisque suscipit augue quis dolor malesuada mollis. Vestibulum interdum et enim nec cursus.
+                  <div class="imgWrapper floatLeft"><img src="images/iota.jpg" alt=""></div>Sed consectetur neque eu turpis viverra rutrum. Nam nulla tortor, tincidunt eget libero eget, efficitur congue est. Cras maximus sed quam a aliquet. In maximus et lorem sed imperdiet. Maecenas vel turpis eros. In viverra, velit nec pulvinar egestas, urna ante pretium ex, eu congue elit odio vel eros. Cras venenatis at velit quis blandit. Ut tincidunt, est sit amet mollis bibendum, lectus quam malesuada turpis, quis eleifend tellus elit sed arcu. Quisque in est id sem porttitor efficitur. Duis non libero sit amet est blandit porta vel et sem. In laoreet malesuada pulvinar. Praesent laoreet ullamcorper egestas. Vestibulum eget ex consectetur, placerat nunc sodales, condimentum massa. Morbi magna sapien, facilisis ac imperdiet in, commodo et metus.
                 </p>
               </span>
             <h4>Perfektion</h4>
             <span>
               <p>
                 <div class="imgWrapper"><img src="images/kappa.jpg" alt=""></div>
-                Nullam vel elementum massa. Mauris interdum arcu id efficitur malesuada. Vestibulum et erat sed felis hendrerit sagittis. Pellentesque ut mauris sed nisl mollis congue. Morbi eleifend suscipit justo ut condimentum. Donec ut magna vel mauris malesuada pulvinar ut vitae sapien. Phasellus consequat, felis ac cursus f
+                Fusce auctor lorem elementum iaculis viverra. Ut quis pharetra erat. Integer feugiat imperdiet turpis sit amet tristique. Maecenas congue maximus sagittis. Nullam vel massa sagittis, viverra erat sed, blandit sapien. In lacinia bibendum imperdiet. Etiam efficitur nibh at fringilla scelerisque. Ut varius ligula vitae mauris faucibus imperdiet. Vivamus tempor eros vel justo placerat mattis. Nullam aliquet turpis vel consequat mattis. 
               </p>
             </span>
         </div>
