initialized service.html/css

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <span>
               <p>
                 <div class="imgWrapper"><img src="images/kappa.jpg" alt=""></div>
-                Fusce auctor lorem elementum iaculis viverra. Ut quis pharetra erat. Integer feugiat imperdiet turpis sit amet tristique. Maecenas congue maximus sagittis. Nullam vel massa sagittis, viverra erat sed, blandit sapien. In lacinia bibendum imperdiet. Etiam efficitur nibh at fringilla scelerisque. Ut varius ligula vitae mauris faucibus imperdiet. Vivamus tempor eros vel justo placerat mattis. Nullam aliquet turpis vel consequat mattis. 
+                Fusce auctor lorem elementum iaculis viverra. Ut quis pharetra erat. Integer feugiat imperdiet turpis sit amet tristique. Maecenas congue maximus sagittis. Nullam vel massa sagittis, viverra erat sed, blandit sapien. In lacinia bibendum imperdiet. Etiam efficitur nibh at fringilla scelerisque. Ut varius ligula vitae mauris faucibus imperdiet. Vivamus tempor eros vel justo placerat mattis. Nullam aliquet turpis vel consequat mattis.
               </p>
             </span>
         </div>
@@ -65,13 +65,13 @@
             <span>Über mich</span>
           </li>
         </a>
-        <a class="navitem" href="#" alt="Service">
+        <a class="navitem" href="service.html" alt="Service">
           <li>
             <img class="icon service" src="icons/service.svg"></img>
             <span>Service</span>
           </li>
         </a>
-        <a class="navitem" href="#" alt="Kontakt">
+        <a class="navitem" href="contact.html" alt="Kontakt">
           <li>
             <img class="icon contact" src="icons/contact.svg"></img>
             <span>Kontakt</span>
