--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
             <span>Über mich</span>
           </li>
         </a>
-        <a class="navitem" href="#" alt="Service">
+        <a class="navitem" href="service.html" alt="Service">
           <li>
             <img class="icon service" src="icons/service.svg"></img>
             <span>Service</span>
           </li>
         </a>
-        <a class="navitem" href="#" alt="Kontakt">
+        <a class="navitem" href="contact.html" alt="Kontakt">
           <li>
             <img class="icon contact" src="icons/contact.svg"></img>
             <span>Kontakt</span>
