--- a/service.html
+++ b/service.html
@@ -13,11 +13,110 @@
     </div>
     <div class="bodyWrapper">
       <div class="bodyInnerWrapper">
-
+        <div class="service animation">
+          <h4>
+            Animation
+          </h4>
+          <span>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id cursus urna.
+Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc eget ligula et nibh ullamcorper ullamcorper vel in nisl:
+          </span>
+          <ul>
+            <li>
+              Lorem
+            </li>
+            <li>
+              Ipsum
+            </li>
+            <li>
+              Gurken
+            </li>
+          </ul>
+        </div>
+        <div class="service photography">
+          <h4>
+            Fotografie
+          </h4>
+          <span>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id cursus urna.
+Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc eget ligula et nibh ullamcorper ullamcorper vel in nisl:
+          </span>
+          <ul>
+            <li>
+              Lorem
+            </li>
+            <li>
+              Ipsum
+            </li>
+            <li>
+              Gurken
+            </li>
+          </ul>
+        </div>
+        <div class="service filming">
+          <h4>
+            Filmaufnahmen
+          </h4>
+          <span>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id cursus urna.
+Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc eget ligula et nibh ullamcorper ullamcorper vel in nisl:
+          </span>
+          <ul>
+            <li>
+              Lorem
+            </li>
+            <li>
+              Ipsum
+            </li>
+            <li>
+              Gurken
+            </li>
+          </ul>
+        </div>
+        <div class="service editing">
+          <h4>
+            Nachbearbeitung
+          </h4>
+          <span>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id cursus urna.
+Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc eget ligula et nibh ullamcorper ullamcorper vel in nisl:
+          </span>
+          <ul>
+            <li>
+              Lorem
+            </li>
+            <li>
+              Ipsum
+            </li>
+            <li>
+              Gurken
+            </li>
+          </ul>
+        </div>
+        <a class="contactButton" href="contact.html">
+          <button class="learnMore" type="button" name="button">
+            <span>
+              Zum Kontaktformular
+            </span>
+            <svg viewBox="0 0 477.862 477.862">
+              <path d="M187.722,102.856V17.062C187.719,7.636,180.076-0.003,170.65,0c-4.834,0.001-9.44,2.053-12.676,5.644L4.375,176.311
+    c-5.617,6.256-5.842,15.67-0.529,22.187l153.6,187.733c5.968,7.295,16.72,8.371,24.016,2.403c3.952-3.233,6.249-8.066,6.26-13.172
+    v-85.043c134.827,4.386,218.965,62.02,256.888,175.787c2.326,6.96,8.841,11.653,16.179,11.656c0.92,0.003,1.84-0.072,2.748-0.222
+    c8.256-1.347,14.319-8.479,14.319-16.845C477.855,259.818,356.87,112.174,187.722,102.856z M170.655,255.995
+    c-9.426,0-17.067,7.641-17.067,17.067v54.613L39.532,188.257l114.057-126.72v57.924c0,9.426,7.641,17.067,17.067,17.067
+    c134.144,0,234.53,92.826,264.124,234.462C379.841,294.6,291.385,255.995,170.655,255.995z"/>
+            </svg>
+          </button>
+        </a>
       </div>
+    </div>
+    <div class="footer">
+        <span>&#169;2021 Johannes Eifler, Freifilmer | Realisation:
+        <a href="https:github.com/JarlTetrazepam" target="_blank" rel="noreferrer noopener">JT</a></span>
+    </div>
     <nav id="navigation" class="noselect">
       <ul class="navButtons">
-        <a class="navitem lightBlue" href="index.html" alt="Home">
+        <a class="navitem" href="index.html" alt="Home">
           <li>
               <img class="icon home" src="icons/home.svg"></img>
               <span>Home</span>
@@ -29,9 +128,9 @@
             <span>Über mich</span>
           </li>
         </a>
-        <a class="navitem" href="service.html" alt="Service">
+        <a class="navitem lightBlue" href="service.html" alt="Service">
           <li>
-            <img class="icon service" src="icons/service.svg"></img>
+            <img class="icon serviceNav" src="icons/service.svg"></img>
             <span>Service</span>
           </li>
         </a>
