improved service ui

--- a/service.html
+++ b/service.html
@@ -14,9 +14,7 @@
     <div class="bodyWrapper">
       <div class="bodyInnerWrapper">
         <div class="service animation">
-          <h4>
-            Animation
-          </h4>
+          <h4>Animation</h4>
           <span>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id cursus urna.
 Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc eget ligula et nibh ullamcorper ullamcorper vel in nisl:
@@ -34,9 +32,7 @@ Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc
           </ul>
         </div>
         <div class="service photography">
-          <h4>
-            Fotografie
-          </h4>
+          <h4>Fotografie</h4>
           <span>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id cursus urna.
 Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc eget ligula et nibh ullamcorper ullamcorper vel in nisl:
@@ -54,9 +50,7 @@ Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc
           </ul>
         </div>
         <div class="service filming">
-          <h4>
-            Filmaufnahmen
-          </h4>
+          <h4>Filmaufnahmen</h4>
           <span>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id cursus urna.
 Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc eget ligula et nibh ullamcorper ullamcorper vel in nisl:
@@ -74,9 +68,7 @@ Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc
           </ul>
         </div>
         <div class="service editing">
-          <h4>
-            Nachbearbeitung
-          </h4>
+          <h4>Nachbearbeitung</h4>
           <span>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id cursus urna.
 Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc eget ligula et nibh ullamcorper ullamcorper vel in nisl:
