designed contact form + page

--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
         <div class="contactButtonBanner stickyTop">
           <span>Interesse geweckt?</span>
           <a class="contactButton" href="contact.html">
-            <button class="learnMore" type="button" name="button">
+            <button class="learnMore buttonScale" type="button" name="button">
               <span>
                 Zum Kontaktformular
               </span>
