contact form responsiveness

--- a/public/contact.html
+++ b/public/contact.html
@@ -16,7 +16,7 @@
         <section class="contentWrapper">
           <div class="formDescription">
             <h1>
-              Nehmen Sie Kontakt auf
+              Treten Sie in Kontakt
             </h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
