improved html sctioning for accessability

--- a/public/contact.html
+++ b/public/contact.html
@@ -34,10 +34,10 @@
         </section>
       </div>
     </div>
-    <div class="footer">
+    <footer class="footer">
         <span>&#169;2021 Johannes Eifler, Freifilmer | Realisation:
         <a href="https:github.com/JarlTetrazepam" target="_blank" rel="noreferrer noopener">JT</a></span>
-    </div>
+    </footer>
     <nav id="navigation" class="noselect">
       <ul class="navButtons">
         <a class="navitem" href="index.html" alt="Home">
