--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,14 @@
       <img id=logo src="" alt="logooooooooo">
     </div>
     <div class="bodyWrapper">
-      <div class="bodyInnerWrapper">
+      <section class="bodyInnerWrapper">
         <div class="arrowWrapper">
           <svg viewBox="0 0 512.002 512.002" class="arrow left dropShadow">>
             <path d="m 46.9,270.05101 236.816,236.161 c 7.759,7.733 20.321,7.72 28.067,-0.04 7.74,-7.759 7.72,-20.328 -0.04,-28.067 L 89.023,256.00001 311.751,33.895999 c 7.759,-7.74 7.779,-20.301 0.04,-28.0609988 C 307.908,1.945 302.821,0 297.734,0 292.66,0 287.593,1.932 283.717,5.7950002 L 46.9,241.95001 c -3.737,3.718 -5.834,8.778 -5.834,14.05 0,5.272 2.103,10.326 5.834,14.051 z"/>
           </svg>
         </div>
-          <div class="presWrapper vid active">
-              <h3 class="presItemHeading">Atemberaubende Filme!</h3>
+          <article class="presWrapper vid active">
+              <h2 class="presItemHeading">Atemberaubende Filme!</h2>
               <img class="presItem" src="movies/landingvid.jpg" alt="video">
               <div class="pButtonWrapper">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -34,9 +34,9 @@
   			c134.144,0,234.53,92.826,264.124,234.462C379.841,294.6,291.385,255.995,170.655,255.995z"/></svg></button>
                 </a>
               </div>
-          </div>
-          <div class="presWrapper images">
-            <h3 class="presItemHeading">Inspirierende Fotos</h3>
+          </article>
+          <article class="presWrapper images">
+            <h2 class="presItemHeading">Inspirierende Fotos</h2>
             <img class="presItem" id="presImage" src="images/vid2.jpg" alt="image">
             <div class="pButtonWrapper">
               <p>Integer vulputate nisl et erat vehicula, id commodo tortor mollis. Donec fermentum enim ac orci lobortis tincidunt.
@@ -55,9 +55,9 @@
        c134.144,0,234.53,92.826,264.124,234.462C379.841,294.6,291.385,255.995,170.655,255.995z"/></svg></button>
               </a>
              </div>
-          </div>
-          <div class="presWrapper more">
-            <h3 class="presItemHeading">Noch nicht fündig geworden?</h3>
+          </article>
+          <article class="presWrapper more">
+            <h2 class="presItemHeading">Noch nicht fündig geworden?</h2>
             <img class="presItem" src="movies/more.jpg" alt="image">
             <div class="pButtonWrapper">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -78,7 +78,7 @@
                 </button>
               </a>
             </div>
-          </div>
+          </article>
         <div class="arrowWrapper">
           <svg viewBox="0 0 512.002 512.002" class="arrow right dropShadow">
             <path d="M388.425,241.951L151.609,5.79c-7.759-7.733-20.321-7.72-28.067,0.04c-7.74,7.759-7.72,20.328,0.04,28.067l222.72,222.105
@@ -86,17 +86,17 @@
 			l236.817-236.155c3.737-3.718,5.834-8.778,5.834-14.05S392.156,245.676,388.425,241.951z"/>
           </svg>
         </div>
-      </div>
+      </section>
     </div>
     <div class="slideDotsWrapper">
       <span class="circle active dropShadow" id="alpha"></span>
       <span class="circle dropShadow" id="beta"></span>
       <span class="circle dropShadow" id="gamma"></span>
     </div>
-    <div class="footer">
+    <footer class="footer">
       	<span>&#169;2021 Johannes Eifler, Freifilmer | Realisation:
         <a href="https:github.com/JarlTetrazepam" target="_blank" rel="noreferrer noopener">JT</a></span>
-    </div>
+    </footer>
     <nav id="navigation" class="noselect">
       <ul class="navButtons">
         <a class="navitem lightBlue" href="index.html" alt="Home">
