--- a/public/service.html
+++ b/public/service.html
@@ -13,7 +13,7 @@
     </div>
     <div class="bodyWrapper">
       <div class="bodyInnerWrapper">
-        <div class="contactButtonBanner stickyTop">
+        <section class="contactButtonBanner stickyTop">
           <span>Interesse geweckt?</span>
           <a class="contactButton" href="contact.html">
             <button class="learnMore buttonScale" type="button" name="button">
@@ -30,9 +30,9 @@
               </svg>
             </button>
           </a>
-        </div>
-        <div class="service animation">
-          <h4>Animation</h4>
+        </section>
+        <section class="service animation">
+          <h2>Animation</h2>
           <span>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id cursus urna.
 Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc eget ligula et nibh ullamcorper ullamcorper vel in nisl:
@@ -48,9 +48,9 @@ Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc
               Gurken
             </li>
           </ul>
-        </div>
-        <div class="service photography">
-          <h4>Fotografie</h4>
+        </section>
+        <section class="service photography">
+          <h2>Fotografie</h2>
           <span>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id cursus urna.
 Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc eget ligula et nibh ullamcorper ullamcorper vel in nisl:
@@ -66,9 +66,9 @@ Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc
               Gurken
             </li>
           </ul>
-        </div>
-        <div class="service filming">
-          <h4>Filmaufnahmen</h4>
+        </section>
+        <section class="service filming">
+          <h2>Filmaufnahmen</h2>
           <span>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id cursus urna.
 Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc eget ligula et nibh ullamcorper ullamcorper vel in nisl:
@@ -84,9 +84,9 @@ Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc
               Gurken
             </li>
           </ul>
-        </div>
-        <div class="service editing">
-          <h4>Nachbearbeitung</h4>
+        </section>
+        <section class="service editing">
+          <h2>Nachbearbeitung</h2>
           <span>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id cursus urna.
 Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc eget ligula et nibh ullamcorper ullamcorper vel in nisl:
@@ -102,13 +102,13 @@ Nunc placerat dui vitae orci pellentesque, sed ullamcorper purus fringilla. Nunc
               Gurken
             </li>
           </ul>
-        </div>
+        </section>
       </div>
     </div>
-    <div class="footer">
+    <footer class="footer">
         <span>&#169;2021 Johannes Eifler, Freifilmer | Realisation:
         <a href="https:github.com/JarlTetrazepam" target="_blank" rel="noreferrer noopener">JT</a></span>
-    </div>
+    </footer>
     <nav id="navigation" class="noselect">
       <ul class="navButtons">
         <a class="navitem" href="index.html" alt="Home">
