--- a/public/about.html
+++ b/public/about.html
@@ -13,28 +13,28 @@
     </div>
     <div class="bodyWrapper">
       <div class="bodyInnerWrapper">
-        <h3>Seid gegrüßt, werter Edelmensch</h3>
-        <div class="aboutWrapper">
-            <span>
+        <article class="aboutWrapper">
+          <h1>Seid gegrüßt, werter Edelmensch</h1>
+            <section>
               <p>
                 <div class="imgWrapper dropShadow"><img class="dropShadow" src="images/lambda.jpg" alt=""></div>
                 Sed consectetur neque eu turpis viverra rutrum. Nam nulla tortor, tincidunt eget libero eget, efficitur congue est. Cras maximus sed quam a aliquet. In maximus et lorem sed imperdiet. Maecenas vel turpis eros. In viverra, velit nec pulvinar egestas, urna ante pretium ex, eu congue elit odio vel eros. Cras venenatis at velit quis blandit. Ut tincidunt, est sit amet mollis bibendum, lectus quam malesuada turpis, quis eleifend tellus elit sed arcu. Quisque in est id sem porttitor efficitur. Duis non libero sit amet est blandit porta vel et sem. In laoreet malesuada pulvinar. Praesent laoreet ullamcorper egestas. Vestibulum eget ex consectetur, placerat nunc sodales, condimentum massa. Morbi magna sapien, facilisis ac imperdiet in, commodo et metus.
               </p>
-            </span>
-              <h4>Konzept</h4>
-              <span>
-                <p>
-                  <div class="imgWrapper floatLeft"><img src="images/iota.jpg" alt=""></div>Sed consectetur neque eu turpis viverra rutrum. Nam nulla tortor, tincidunt eget libero eget, efficitur congue est. Cras maximus sed quam a aliquet. In maximus et lorem sed imperdiet. Maecenas vel turpis eros. In viverra, velit nec pulvinar egestas, urna ante pretium ex, eu congue elit odio vel eros. Cras venenatis at velit quis blandit. Ut tincidunt, est sit amet mollis bibendum, lectus quam malesuada turpis, quis eleifend tellus elit sed arcu. Quisque in est id sem porttitor efficitur. Duis non libero sit amet est blandit porta vel et sem. In laoreet malesuada pulvinar. Praesent laoreet ullamcorper egestas. Vestibulum eget ex consectetur, placerat nunc sodales, condimentum massa. Morbi magna sapien, facilisis ac imperdiet in, commodo et metus.
-                </p>
-              </span>
-            <h4>Perfektion</h4>
-            <span>
+            </section>
+            <section>
+              <h2>Konzept</h2>
+              <p>
+                <div class="imgWrapper floatLeft"><img src="images/iota.jpg" alt=""></div>Sed consectetur neque eu turpis viverra rutrum. Nam nulla tortor, tincidunt eget libero eget, efficitur congue est. Cras maximus sed quam a aliquet. In maximus et lorem sed imperdiet. Maecenas vel turpis eros. In viverra, velit nec pulvinar egestas, urna ante pretium ex, eu congue elit odio vel eros. Cras venenatis at velit quis blandit. Ut tincidunt, est sit amet mollis bibendum, lectus quam malesuada turpis, quis eleifend tellus elit sed arcu. Quisque in est id sem porttitor efficitur. Duis non libero sit amet est blandit porta vel et sem. In laoreet malesuada pulvinar. Praesent laoreet ullamcorper egestas. Vestibulum eget ex consectetur, placerat nunc sodales, condimentum massa. Morbi magna sapien, facilisis ac imperdiet in, commodo et metus.
+              </p>
+            </section>
+            <section>
+              <h2>Perfektion</h2>
               <p>
                 <div class="imgWrapper"><img src="images/kappa.jpg" alt=""></div>
                 Fusce auctor lorem elementum iaculis viverra. Ut quis pharetra erat. Integer feugiat imperdiet turpis sit amet tristique. Maecenas congue maximus sagittis. Nullam vel massa sagittis, viverra erat sed, blandit sapien. In lacinia bibendum imperdiet. Etiam efficitur nibh at fringilla scelerisque. Ut varius ligula vitae mauris faucibus imperdiet. Vivamus tempor eros vel justo placerat mattis. Nullam aliquet turpis vel consequat mattis.
               </p>
-            </span>
-        </div>
+            </section>
+        </article>
         <div class="imageGallery">
           <img src="images/alpha.jpg" alt="">
           <img src="images/beta.jpg" alt="">
@@ -47,10 +47,10 @@
         </div>
       </div>
     </div>
-    <div class="footer">
+    <footer class="footer">
       	<span>&#169;2021 Johannes Eifler, Freifilmer | Realisation:
         <a href="https:github.com/JarlTetrazepam" target="_blank" rel="noreferrer noopener">JT</a></span>
-    </div>
+    </footer>
     <nav id="navigation" class="noselect">
       <ul class="navButtons">
         <a class="navitem" href="index.html" alt="Home">
