--- a/public/contact.html
+++ b/public/contact.html
@@ -68,19 +68,7 @@
     </nav>
   </body>
   <script src="scripts.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-analytics.js"></script>
-  <script>
-  var firebaseConfig = {
-    apiKey: "AIzaSyDdSjNxvHF5plOk-lRCm07Y5DDo8VPTNiA",
-    authDomain: "seife-3082b.firebaseapp.com",
-    projectId: "seife-3082b",
-    storageBucket: "seife-3082b.appspot.com",
-    messagingSenderId: "432701812499",
-    appId: "1:432701812499:web:68b28913a4ba6190b234e6",
-    measurementId: "G-THMDY03PCG"
-  };
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-  </script>
+  <script src="/__/firebase/8.2.5/firebase-app.js"></script>
+  <script src="/__/firebase/8.2.5/firebase-analytics.js"></script>
+  <script src="/__/firebase/init.js"></script>
 </html>
