meta description for index.html

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+    <meta name="description" content="Ich als unabhängiger Freifilmer und Editor erstelle hochqualitativen Content für Ihren Medienauftritt! Meine Arbeitsbereiche umfassen FIlmografie, Animation, Editing und vieles mehr. Kontaktieren Sie mich für ein individuelles Angebot">
     <title>Johannes Eifler</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="logos/test.png" type="image/icon type">
