improved accessability with tabindex

--- a/public/contact.html
+++ b/public/contact.html
@@ -43,25 +43,25 @@
     </footer>
     <nav id="navigation" class="noselect">
       <ul class="navButtons">
-        <a class="navitem" href="index.html" alt="Home">
+        <a tabindex="1" class="navitem" href="index.html" alt="Home">
           <li>
               <img class="icon home" src="icons/home.svg"></img>
               <span>Home</span>
           </li>
         </a>
-        <a class="navitem" href="about.html" alt="Über mich">
+        <a tabindex="1" class="navitem" href="about.html" alt="Über mich">
           <li>
             <img class="icon about" src="icons/about.svg"></img>
             <span>Über mich</span>
           </li>
         </a>
-        <a class="navitem" href="service.html" alt="Service">
+        <a tabindex="1" class="navitem" href="service.html" alt="Service">
           <li>
             <img class="icon serviceNav" src="icons/service.svg"></img>
             <span>Service</span>
           </li>
         </a>
-        <a class="navitem lightBlue" href="contact.html" alt="Kontakt">
+        <a tabindex="1" class="navitem lightBlue" href="contact.html" alt="Kontakt">
           <li>
             <img class="icon contact" src="icons/contact.svg"></img>
             <span>Kontakt</span>
