--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <div class="bodyWrapper">
       <section class="bodyInnerWrapper">
         <div class="arrowWrapper">
-          <svg viewBox="0 0 512.002 512.002" class="arrow left dropShadow">>
+          <svg tabindex="0" alt="picture slide control left" viewBox="0 0 512.002 512.002" class="arrow left dropShadow">>
             <path d="m 46.9,270.05101 236.816,236.161 c 7.759,7.733 20.321,7.72 28.067,-0.04 7.74,-7.759 7.72,-20.328 -0.04,-28.067 L 89.023,256.00001 311.751,33.895999 c 7.759,-7.74 7.779,-20.301 0.04,-28.0609988 C 307.908,1.945 302.821,0 297.734,0 292.66,0 287.593,1.932 283.717,5.7950002 L 46.9,241.95001 c -3.737,3.718 -5.834,8.778 -5.834,14.05 0,5.272 2.103,10.326 5.834,14.051 z"/>
           </svg>
         </div>
@@ -81,7 +81,7 @@
             </div>
           </article>
         <div class="arrowWrapper">
-          <svg viewBox="0 0 512.002 512.002" class="arrow right dropShadow">
+          <svg tabindex="0" alt="picture slide control right" viewBox="0 0 512.002 512.002" class="arrow right dropShadow">
             <path d="M388.425,241.951L151.609,5.79c-7.759-7.733-20.321-7.72-28.067,0.04c-7.74,7.759-7.72,20.328,0.04,28.067l222.72,222.105
 			L123.574,478.106c-7.759,7.74-7.779,20.301-0.04,28.061c3.883,3.89,8.97,5.835,14.057,5.835c5.074,0,10.141-1.932,14.017-5.795
 			l236.817-236.155c3.737-3.718,5.834-8.778,5.834-14.05S392.156,245.676,388.425,241.951z"/>
@@ -100,25 +100,25 @@
     </footer>
     <nav id="navigation" class="noselect">
       <ul class="navButtons">
-        <a class="navitem lightBlue" href="index.html" alt="Home">
+        <a tabindex="1" class="navitem lightBlue" href="index.html" alt="Home">
           <li>
               <img class="icon home" src="icons/home.svg"></img>
               <span>Home</span>
           </li>
         </a>
-        <a class="navitem" href="about.html" alt="Über mich">
+        <a tabindex="1" class="navitem" href="about.html" alt="Über mich">
           <li>
             <img class="icon about" src="icons/about.svg"></img>
             <span>Über mich</span>
           </li>
         </a>
-        <a class="navitem" href="service.html" alt="Service">
+        <a tabindex="1" class="navitem" href="service.html" alt="Service">
           <li>
             <img class="icon service" src="icons/service.svg"></img>
             <span>Service</span>
           </li>
         </a>
-        <a class="navitem" href="contact.html" alt="Kontakt">
+        <a tabindex="1" class="navitem" href="contact.html" alt="Kontakt">
           <li>
             <img class="icon contact" src="icons/contact.svg"></img>
             <span>Kontakt</span>
